# telegram_bots

./: .gitignore  systemd_setup.sh  template.service
bot_common/: pyproject.toml
bot_common/bot_common/: decorators.py
leetcode/: Makefile  example_config.py  leetcode_spy_bot.py  pyproject.toml  test_leetcode_gql.py
lichess/: Makefile  example_config.py  lichess_spy_bot.py  pyproject.toml
