[tool.poetry]
name = "leetcode_spy_bot"
version = "0.1.0"
description = ""
authors = ["dmisc <dmisc@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
python-telegram-bot = "^13.13"
bot-common = {path = "../bot_common", develop = true}

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
